--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="inputArea">
         <p>Input: <span id="input"></span></p>
     </div>
-    <div class="container">
+    <div class="container" id="container">
         <div class="row1" id="row1">
             <!--<div class="keys" id="Q">Q</div>
             <div class="keys" id="W">W</div>
@@ -48,8 +48,8 @@
             <div class="keys" id="M">M</div>-->
         </div>
     </div>
-    <div class="clear" id="clear">Clear</div>
-    <div class="shift" id="shift">Shift</div>
+    <!--<div class="clear" id="clear">Clear</div>
+    <div class="shift" id="shift">Shift</div>-->
     
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
