--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <p>Input: <span id="input"></span></p>
     </div>
     <div class="container" id="container">
-        <div class="row1" id="row1">
-            <!--<div class="keys" id="Q">Q</div>
+        <!--<div class="row1" id="row1">
+            <div class="keys" id="Q">Q</div>
             <div class="keys" id="W">W</div>
             <div class="keys" id="E">E</div>
             <div class="keys" id="R">R</div>
@@ -26,10 +26,10 @@
             <div class="keys" id="U">U</div>
             <div class="keys" id="I">I</div>
             <div class="keys" id="O">O</div>
-            <div class="keys" id="P">P</div>-->
+            <div class="keys" id="P">P</div>
         </div>
         <div class="row2" id="row2">
-            <!--<div class="keys" id="A">A</div>
+            <div class="keys" id="A">A</div>
             <div class="keys" id="S">S</div>
             <div class="keys" id="D">D</div>
             <div class="keys" id="F">F</div>
@@ -37,17 +37,17 @@
             <div class="keys" id="H">H</div>
             <div class="keys" id="J">J</div>
             <div class="keys" id="K">K</div>
-            <div class="keys" id="L">L</div>-->
+            <div class="keys" id="L">L</div>
         </div>
         <div class="row3" id="row3">
-            <!--<div class="keys" id="Z">Z</div>
+            <div class="keys" id="Z">Z</div>
             <div class="keys" id="X">X</div>
             <div class="keys" id="C">C</div>
             <div class="keys" id="V">V</div>
             <div class="keys" id="B">B</div>
             <div class="keys" id="N">N</div>
-            <div class="keys" id="M">M</div>-->
-        </div>
+            <div class="keys" id="M">M</div>
+        </div>-->
     </div>
     <!--<div class="clear" id="clear">Clear</div>
     <div class="shift" id="shift">Shift</div>-->
